# bdffont

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml
assets/: demo.bdf  example.bdf
assets/damaged/: illegal_word_in_char.bdf  illegal_word_in_font.bdf  incorrect_chars_count.bdf  incorrect_properties_count.bdf  no_line_bbx.bdf  no_line_chars.bdf  no_line_dwidth.bdf  no_line_encoding.bdf  no_line_end_char.bdf  no_line_end_font.bdf  no_line_end_properties.bdf  no_line_font.bdf  no_line_fontboundingbox.bdf  no_line_size.bdf  no_line_swidth.bdf  not_a_bdf.bdf  not_support_version.bdf
examples/: __init__.py  create.py  demo.py  demo_create.py  demo_load.py  load.py  load_bdf.py  path_define.py  print.py
src/bdffont/: __init__.py  common.py  error.py  font.py  glyph.py  parser.py  properties.py  xlfd.py
tests/: __init__.py  path_define.py  test_damaged.py  test_demo.py  test_example.py  test_font.py  test_glyph.py  test_load_save.py  test_parse_dump.py  test_properties.py  test_spec.py  test_type.py
