[project]
name = "bdffont"
version = "0.0.1"
description = "A library for manipulating '.bdf' format fonts."
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10"
authors = [
    { name = "TakWolf" },
]
maintainers = [
    { name = "TakWolf" },
]
keywords = ["bdf", "font"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/TakWolf/bdffont"
source = "https://github.com/TakWolf/bdffont"
issues = "https://github.com/TakWolf/bdffont/issues"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
